--- a/autho.html
+++ b/autho.html
@@ -4,26 +4,25 @@
         <title>Вход</title>
         <link rel="icon" href="style/img/icon.png">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="style/main.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="style/main.css">
     </head>
     <body>
         <div class="container-fluid body" id="main_block">
             <div class="row page_top">
-                <span class="title">ToDo-Do</span>
-                <span class="right_part">Нет аккаунта? <input type="button" class="btn btn-info cornerbtn" value="Регистрация"></span>
+                <span class="title">ToDo-Do. Авторизация</span>
+                <span class="right_part">Нет аккаунта? <input type="button" class="btn btn-warning cornerbtn" value="Регистрация"></span>
             </div>
             <div class="row main">
                 <div class="col-2"></div>
                 <div class="col-8 autho">
                     <span>
                         <form id = 'login' method = 'post'  action="/login">
-                            <label id='name'>Имя пользователя</label><br>
-                            <input type='text', name='login' class="form-control" required><br>
-                            <label id='password'>Пароль</label><br>
-                            <input type='password', name='password' class="form-control" required><br>
-                            <input type='submit', class='btn btn-info', value='Вход'>
+                            <label id='name'>Имя пользователя</label>
+                            <input type='text', name='login' class="form-control" required>
+                            <label id='password'>Пароль</label>
+                            <input type='password', name='password' class="form-control" required>
+                            <input type='submit', class='btn btn-warning', value='Вход'>
                         </form>
                     </span>
                 </div>
