--- a/main.html
+++ b/main.html
@@ -1,29 +1,44 @@
 <!doctype html>
 <html>
 <head>
-    <title>Избранное</title>
+    <title>ToDo-Do</title>
     <link rel="icon" href="style/img/icon.png">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style/main.css">
-    <link rel="stylesheet" href="style/res.css">
 </head>
 <body>
 <div class="container-fluid body">
     <div class="row page_top">
         <span class="title">ToDo-Do</span>
         <span class="right_part">
-            <span id="username"></span><input type="button" class="btn btn-info cornerbtn" value="Выйти"></span>
+            <span id="username"></span><input type="button" class="btn btn-warning cornerbtn" value="Выйти"></span>
         </span>
     </div>
     <div class="row main">
-        <div class="col-12" id='result'>
+        <div class="col-1"></div>
+        <div class="col-9">
+            <div class="accord">
+                <h3><span><img src="style/img/plus.png"><span> Добавить задание в список</h3>
+            <block>
+                <form action="/add" method="post" id="form">
+                    <input type="text" class="form-control area_text rus_text" placeholder="Введите название" name = "name" required>
+
+                    <input type="text" class="form-control area_text rus_text" placeholder="Введите описание" name = "description" required>
+
+                    <input type="date" class="form-control" name = "deadline" min="2020-05-08" max="2050-12-31" required>
+                    <input class="button btn btn-warning push" type="submit" value="Добавить">
+                </form>
+            </block>
+            </div>
+            <br>
+            <div id="result"></div>
         </div>
+        <div class="col-2"></div>
     </div>
 </div>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
-<script src="js/fav.js"></script>
 <script>
     function getUsername(){
         var xhr = new XMLHttpRequest();
@@ -36,9 +51,10 @@
         xhr.send()
     }
     $( ".cornerbtn").click(function() {
-        window.location.href = `/autho`;
+        window.location.href = `/logout`;
     });
     getUsername();
 </script>
 </body>
+<script src='src/main.js' type="text/javascript"></script>
 </html>
