--- a/regist.html
+++ b/regist.html
@@ -4,27 +4,27 @@
     <title>Регистрация</title>
     <link rel="icon" href="style/img/icon.png">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
 <div class="container-fluid body">
     <div class="row page_top">
-        <span class="title">Осьметодичка. Регистрация</span>
-        <span class="right_part">Есть аккаунт? <input type="button" class="btn btn-info cornerbtn" value="Войти"></span>
+        <span class="title">ToDo-Do. Регистрация</span>
+        <span class="right_part">Есть аккаунт? <input type="button" class="btn btn-warning cornerbtn" value="Войти"></span>
     </div>
     <div class="row main">
         <div class="col-2"></div>
         <div class="col-8 autho">
                     <span>
                         <form action="/reg" method="post" id="form">
-                            <label id='name'>Имя пользователя</label><br>
-                            <input type='text', name='name' class="form-control username" required><br>
-                            <label id='password1'>Пароль</label><br>
-                            <input type='password', name='password1' class="form-control userpass" required><br>
-                            <label id='password2'>Повторите пароль</label><br>
-                            <input type='password', name='password2' class="form-control" required><br>
-                            <input type='submit', class='btn btn-info', value='Регистрация'>
+                            <label id='name'>Имя пользователя</label>
+                            <input type='text', name='name' class="form-control username" required>
+                            <label id='password1'>Пароль</label>
+                            <input type='password', name='password1' class="form-control userpass" required>
+                            <label id='password2'>Повторите пароль</label>
+                            <input type='password', name='password2' class="form-control" required>
+                            <input type='submit', class='btn btn-warning', value='Регистрация'>
                         </form>
                     </span>
         </div>
