fixed adding error

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
     <div class="row main">
         <div class="col-1"></div>
         <div class="col-9">
-            <div class="accord">
+            <div class="accord1">
                 <h3><span><img src="style/img/plus.png"><span> Добавить задание в список</h3>
             <block>
                 <form action="/add" method="post" id="form">
