--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
                 <form action="/add" method="post" id="form">
                     <input type="text" class="form-control area_text rus_text" placeholder="Введите название" name = "name" required>
 
-                    <input type="text" class="form-control area_text rus_text" placeholder="Введите описание" name = "description" required>
+                    <input type="text" class="form-control area_text rus_text" placeholder="Введите описание" name = "description">
 
                     <input type="date" class="form-control" name = "deadline" min="2020-05-08" max="2050-12-31" required>
                     <input class="button btn btn-warning push" type="submit" value="Добавить">
