added dued status

--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 
                     <input type="text" class="form-control area_text rus_text" placeholder="Введите описание" name = "description">
 
-                    <input type="date" class="form-control" name = "deadline" min="2020-05-10" max="2050-12-31" required>
+                    <input id="datefield" type="date" class="form-control" name = "deadline" min="2020-05-10" max="2050-12-31" required>
                     <input class="button btn btn-warning push" type="submit" value="Добавить">
                 </form>
             </block>
